# amardiscord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  serve.sh
.github/workflows/: test.yml
scripts/: split_channels.py
src/: db.rs  lib.rs  main.rs  search.rs  serve.rs  templates.rs
src/db/: init.rs  mod.rs
src/db/migrations/: init.sql
src/static/: index.css  index.html  index.js
src/templates/: message_page.html  mod.rs  search.html  toc.html
templates/: base.html  channel_list.html  index.html  layout.html  message_page.html  search.html  toc.html
