[package]
name = "amardiscord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
itertools = "0.11.0"
maud = { version = "0.25.0", features = ["axum"] }
once_cell = "1.18.0"
regex = "1.10.2"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
