[package]
name = "amardiscord"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.6.20"
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.11.0"
maud = { version = "0.25.0", features = ["axum"] }
once_cell = "1.18.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
regex = "1.10.2"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
textwrap-macros = "0.3.0"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
