[package]
name = "amardiscord"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.14" }
askama_escape = "0.13.0"
axum = "0.8.4"
chrono = { version = "0.4.31", default-features = false, features = ["serde"] }
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.11.0"
once_cell = "1.18.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
regex = "1.10.2"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
textwrap-macros = "0.3.0"
thiserror = "2.0.12"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
